package vtctlclient

import (
	"context"

	"github.com/your-project/vschemapb"
)

type gRPCVSchemaOperations struct {
	client *gRPCClient
	keyspace string
}

func (ops *gRPCVSchemaOperations) AddTable(ctx context.Context, keyspace, tableName string, tableSpec interface{}) error {
	// 1. Get current VSchema with version
	vschema, version, err := ops.client.GetVSchema(ctx, keyspace)
	if err != nil {
		return err
	}

	// 2. Validate table spec
	spec, err := validateTableSpec(tableSpec)
	if err != nil {
		return err
	}

	// 3. Modify VSchema
	// Add table to vschema.Tables map

	// 4. Save with version check
	return ops.client.SaveVSchema(ctx, keyspace, vschema, version)
}

// Implement other VSchemaOperations methods similarly 